@@ -142,7 +142,8 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * (bug 4737) MediaWiki:Viewcount supports {{PLURAL}} now
 * Fix bug in wfMsgExt under PHP 5.1.2
 * (bug 5761) Project talk namespace broken in Xal, Os, Udm and Cv
-
+* Rewrite reassignEdits script to be more efficient; support optional updates to
+  recent changes table
 
 == Compatibility ==
 
